--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "npca-nhs",
   "version": "1.0.0",
   "description": "Collegiate Academy National Honor Society",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "build-site": "reem --dir website",
     "serve-site": "http-server website/output",
+    "start": "node lib/index.js",
+    "launch": "node lib/production.js",
     "test": "mocha"
   },
   "repository": {
@@ -24,6 +26,28 @@
   },
   "homepage": "https://github.com/andrejewski/npca-nhs",
   "dependencies": {
+    "async": "^0.9.0",
+    "body-parser": "^1.4.3",
+    "compression": "^1.0.8",
+    "connect-mongo": "^0.4.1",
+    "cookie-parser": "^1.3.2",
+    "express": "^4.4.5",
+    "express-session": "^1.6.1",
+    "forever": "^0.11.1",
+    "jade": "^1.3.1",
+    "mandrill-api": "^1.0.40",
+    "marked": "^0.3.2",
+    "method-override": "^2.0.2",
+    "moment": "^2.8.1",
+    "mongoose": "^4.0.3",
+    "morgan": "^1.1.1",
+    "node-schedule": "^0.1.13",
+    "passport": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "^2.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
     "reem": "^0.0.5",
     "reem-markdown": "^0.1.0"
   }
